Fix(creation): Set spaces and gap

--- a/src/styles/components/forms.scss
+++ b/src/styles/components/forms.scss
@@ -8,7 +8,8 @@
         margin-bottom: 5px;
     }
 
-    > input[type="text"] {
+    > input[type="text"],
+    > input[type="number"] {
         width: 100%;
     }
 }
