--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -237,7 +237,7 @@ input[type="radio"] {
 }
 
 textarea {
-  height: 150px;
+  height: 15vh;
   width: 100%;
   padding: 10px;
 
