--- a/src/views/roleplay/creation/CreationView.scss
+++ b/src/views/roleplay/creation/CreationView.scss
@@ -70,6 +70,7 @@
   .creation-img-perso {
     display: block;
     height: 100%;
+    max-height: 40vw;
     margin: auto;
     padding: 0;
   }
